force-app/main/default/objects/Condition__c/fields/CommonName__c.field-meta.xml
<CustomField>
    <fullName>CommonName__c</fullName>
    <label>Common Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>