force-app/main/default/objects/Condition__c/fields/InfermedicaId__c.field-meta.xml
<CustomField>
    <fullName>InfermedicaId__c</fullName>
    <externalId>true</externalId>
    <label>Infermedica Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>