force-app/main/default/objects/Condition__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability</label>
    <precision>8</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>